libs/ui/input/wintab/kis_tablet_support_win_p.h
@@ -124,7 +124,6 @@ private:
     bool m_tiltSupport;
     QVector<QWindowsTabletDeviceData> m_devices;
     int m_currentDevice;
-    QPointF m_oldGlobalPosF;
 
 
     QWidget *targetWidget{0};
